--- a/js/listings/listings-main.html
+++ b/js/listings/listings-main.html
@@ -1,15 +1,3 @@
-<div class="container">
-	<h1>Listings Layout</h1>
-	<div class="row">
-		<div class="col-sm-6">
-			<div ui-view="main">
-				<!-- main view -->
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div ui-view="sidebar">
-				<!-- sidebar view -->
-			</div>
-		</div>
-	</div>
+<div class="jumbotron">
+	<h3>I want to cut patterns</h1>
 </div>
