--- a/js/listings/listings-sidebar.html
+++ b/js/listings/listings-sidebar.html
@@ -1,1 +1,12 @@
-listings-sidebar.js
+<h1>Listings-sidebar</h1>
+<ul>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+	<li>This is a listing</li>
+</ul>
