--- a/js/profile/profile-layout.html
+++ b/js/profile/profile-layout.html
@@ -1,13 +1,18 @@
 <div class="container">
-	<h1>Listings Layout</h1>
+	<h1>Profile Layout</h1>
 	<div class="row">
 		<div class="col-sm-8">
-			<div ui-view="main">
+			<div ui-view="dreams">
 				<!-- main view -->
 			</div>
 		</div>
 		<div class="col-sm-4">
-			<div ui-view="sidebar">
+			<div ui-view="stats">
+				<!-- sidebar view -->
+			</div>
+		</div>
+		<div class="col-sm-12">
+			<div ui-view="skills">
 				<!-- sidebar view -->
 			</div>
 		</div>
