list skills widget added

--- a/js/profile/profile-skills.html
+++ b/js/profile/profile-skills.html
@@ -1,1 +1,5 @@
-                // template: 'this widget displays an seo friendly list of transferable skills',
+<div class="row">
+	<div class="col-snm-12 well">
+		<h2 class="label label-default" ng-repeat="skill in skills">{{skill.name}}</h2>
+	</div>
+</div>
