--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="mainApp">
+<html lang="en" ng-app="SystemApp">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,21 +36,29 @@
 		<script src="js/vendor/angular/angular.js"></script>
 		<!-- // <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
 		<script src="js/vendor/angular-ui-router/release/angular-ui-router.js"></script>
-		<script src="js/vendor/angular-bootstrap/ui-bootstrap.js"></script>
+		<!-- // <script src="js/vendor/angular-bootstrap/ui-bootstrap.js"></script> -->
 		<script src="//code.jquery.com/jquery.js"></script>
 		<script src="js/vendor/ng-resource/dist/ng-resource.js"></script>
-		<script src="js/vendor/angular-animate/angular-animate.js"></script>
+		<!-- // <script src="js/vendor/angular-animate/angular-animate.js"></script> -->
 		<script src="//cdn.firebase.com/v0/firebase.js"></script>
 		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
 		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
 
-
 		<script src="js/app.js"></script>
-		<script src="js/controllers.js"></script>
+
+		// Profile Controllers
+		<!-- // <script src="js/profile/controllers/ProfileCtrl.js"></script> -->
+		<script src="js/profile/controllers/DreamsCtrl.js"></script>
+		<script src="js/profile/controllers/SkillsCtrl.js"></script>
+		<script src="js/profile/controllers/StatsCtrl.js"></script>
+
+
+
+
+		<!-- // <script src="js/controllers.js"></script> -->
 		<!-- script src="js/filters.js"></script -->
 		<!-- script src="js/services.js"></script -->
 		<!-- script src="js/directives.js"></script -->
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 	</body>
 </html>
