--- a/js/profile/profile-stats.html
+++ b/js/profile/profile-stats.html
@@ -1,16 +1,4 @@
-<h6>Displays the weather as icon in place of photo and location</h6>
 
-<h3>Your Division<h3>
-<ul>
-	<li>your skill</li>
-	<li>your skill</li>
-	<li>your skill</li>
-</ul>
-<h3>Your Other Division<h3>
-<ul>
-	<li>your other skill</li>
-	<li>your other skill</li>
-	<li>your other skill</li>
-	<li>your other skill</li>
-	<li>your other skill</li>
-</ul>
+<h2>{{stats.username}}</h2>
+<h5>load into weather directive: {{stats.location}}</h5>
+<h5>load into ratings directive: {{stats.rating}}</h5>
