this is looks like a knife and it talks about cutting and patterns

--- a/js/profile/profile-dreams.html
+++ b/js/profile/profile-dreams.html
@@ -1,2 +1,7 @@
-<h3>Hell0 {{user.name}}</h3>
-<h4>Things I did before arriving here</h4>
+<div class="row">
+	<div class="col-snm-12 well">
+		<h3>{{user.name}}</h3>
+		{{user.coverletter}}
+		{{user.cv}}
+	</div>
+</div>
