add row, knife vanishes

--- a/js/profile/profile-layout.html
+++ b/js/profile/profile-layout.html
@@ -11,6 +11,8 @@
 				<!-- sidebar view -->
 			</div>
 		</div>
+	</div>
+	<div class="row">
 		<div class="col-sm-12">
 			<div ui-view="skills">
 				<!-- sidebar view -->
