--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>AngularFire Login Boilerplate</title>
+		<title>careersuici.de</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="A simple template for getting started with AngularFire (AngularJS + Firebase) w/ user login system">
 		<meta name="author" content="Matt Malenczak">
@@ -44,6 +44,8 @@
 		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
 		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
+		// Listings Controllers
+		<script src="js/listings/controllers/ListingsCtrl.js"></script>
 
 		<script src="js/app.js"></script>
 
