state params boolean show hide on element

--- a/js/home/home-welcome.html
+++ b/js/home/home-welcome.html
@@ -2,6 +2,6 @@
 	<div class="jumbotron">
 		<h3>Welcome to Your App</h3>
 		<a href="#/listings" class="btn btn-warning">View Listings</a>
-		<a href="#/profile" type="button" class="btn btn-success">Edit Profile</a>
+		<a href="#/profile" class="btn btn-success">Edit Profile</a>
 	</div>
 </div>
