routing added for public viewable profiles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<script src="js/app.js"></script>
 
 		// Profile Controllers
-		<!-- // <script src="js/profile/controllers/ProfileCtrl.js"></script> -->
+		<script src="js/profile/controllers/ProfileCtrl.js"></script>
 		<script src="js/profile/controllers/DreamsCtrl.js"></script>
 		<script src="js/profile/controllers/SkillsCtrl.js"></script>
 		<script src="js/profile/controllers/StatsCtrl.js"></script>
