--- a/js/profile/profile-dreams.html
+++ b/js/profile/profile-dreams.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-snm-12 well">
-		<h3>{{user.name}}</h3>
+		<h3>{{username}}</h3>
 		{{user.coverletter}}
 		{{user.cv}}
 	</div>
