--- a/js/profile/profile-stats.html
+++ b/js/profile/profile-stats.html
@@ -1,5 +1,5 @@
 
-<h2>{{stats.username}}</h2>
+<h2>{{username}}</h2>
 <weather details="{{stats.location}}"/>
 <h5>load into weather directive: {{stats.location}}</h5>
 <h5>load into ratings directive: {{stats.rating}}</h5>
