header and footer partial directives created

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 				</div>
 			</div>
 		</nav> -->
-		<ui-view autoscroll="false"/>
+		
+		<systemheader></systemheader>
+		
+		<ui-view autoscroll="false"></ui-view>
+		
+		<systemfooter></systemfooter>
 
 		<script src="js/vendor/angular/angular.js"></script>
 		<!-- // <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
@@ -44,22 +49,28 @@
 		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
 		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
-		// Listings Controllers
+		<!-- // System -->
+		<script src="js/system/header/HeaderCtrl.js"></script>
+		<script src="js/system/header/HeaderDirective.js"></script>
+		<script src="js/system/footer/FooterCtrl.js"></script>
+		<script src="js/system/footer/FooterDirective.js"></script>
+		
+		<!-- // Listings Controllers -->
 		<script src="js/listings/controllers/ListingsCtrl.js"></script>
 
 		<script src="js/app.js"></script>
 
-		// Profile Controllers
+		<!-- // Profile Controllers -->
 		<script src="js/profile/controllers/ProfileCtrl.js"></script>
 		<script src="js/profile/controllers/DreamsCtrl.js"></script>
 		<script src="js/profile/controllers/SkillsCtrl.js"></script>
 		<script src="js/profile/controllers/StatsCtrl.js"></script>
 		
 
-		// Weather Plugin
+		<!-- // Weather Plugin -->
 		<script src="js/profile/weather/jquery.simpleWeather.js"></script>
 		<script src="js/profile/weather/WeatherDirective.js"></script>
-		// Ratings Plugin
+		<!-- // Ratings Plugin -->
 		<!-- // <script src="js/profile/plugins/RatingsCtrl.js"></script> -->
 
 
