--- a/js/system/footer/footer.html
+++ b/js/system/footer/footer.html
@@ -1,1 +1,10 @@
-<h3>&copy; {{copyleft}}</h3>
+<footer>
+	<!-- ng-controller="SystemCtrl"> -->
+	<div class="container">
+    	<div class="row">
+      		<div class="col-sm-12" ng-controller="FooterCtrl">
+				<h6>&copy; {{copyleft}}</h6>
+      		</div>
+    	</div>
+  	</div>
+</footer>
