--- a/js/system/header/header.html
+++ b/js/system/header/header.html
@@ -1,1 +1,17 @@
-<h1>{{sitename}}khlkhlkjhlkjhl</h1>
+<header>
+	<!-- ng-controller="SystemCtrl"> -->
+	<nav class="navbar navbar-default navbar-fixed-top"> 
+		<div class="container">
+			<div class="navbar-header" ng-controller="HeaderCtrl">
+				<a class="navbar-brand" href="#/">{{sitename}}</a>
+			</div>
+			<ul class="nav navbar-nav">
+				<li><a href="#/listings">Listings</a></li>
+				<li><a href="#/profile">Profile</a></li>
+			</ul>
+			<div class="nav navabar-right navbar-text" ng-controller="MainCtrl">
+				{{greeting}}
+			</div>
+		</div>
+	</nav>
+</header>
