angular animate bootstrapped on main view

--- a/js/system/header/header.html
+++ b/js/system/header/header.html
@@ -9,7 +9,7 @@
 				<li><a href="#/listings">Listings</a></li>
 				<li><a href="#/profile">Profile</a></li>
 			</ul>
-			<div class="nav navabar-right navbar-text" ng-controller="MainCtrl">
+			<div class="nav navabar-right navbar-text">
 				{{greeting}}
 			</div>
 		</div>
