--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- link rel="shortcut icon" href="img/favicon.png" -->
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/app.css"/>
+		<link rel="stylesheet" href="js/system.css"/>
 		<!--[if lt IE 9]>
 			<script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 			<script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -20,13 +20,14 @@
 		
 		<systemheader></systemheader>
 		
-		<ui-view autoscroll="false"></ui-view>
+		<ui-view autoscroll="false" class="fade"></ui-view>
 		
 		<systemfooter></systemfooter>
 
 		<script src="js/vendor/angular/angular.js"></script>
 		<!-- // <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
 		<script src="js/vendor/angular-ui-router/release/angular-ui-router.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-animate.js"></script>
 		<!-- // <script src="js/vendor/angular-bootstrap/ui-bootstrap.js"></script> -->
 		<script src="//code.jquery.com/jquery.js"></script>
 		<script src="js/vendor/ng-resource/dist/ng-resource.js"></script>
