--- a/js/profile/profile-dreams.html
+++ b/js/profile/profile-dreams.html
@@ -1,7 +1,19 @@
 <div class="row">
 	<div class="col-snm-12 well">
-		<h3>{{username}}</h3>
-		{{user.coverletter}}
-		{{user.cv}}
+		<tabset>
+		    <tab heading="Cover Letter">
+		    	{{user.coverletter}}
+		    </tab>
+		    <tab heading="CV">
+				{{user.cv}}
+		    </tab>
+  		</tabset>
 	</div>
 </div>
+
+<!--     <tab select="alertMe()">
+      <tab-heading>
+        <i class="glyphicon glyphicon-bell"></i> Alert!
+      </tab-heading>
+      I've got an HTML heading, and a select callback. Pretty cool!
+    </tab> -->
