saving before experiment

--- a/js/profile/profile-dreams.html
+++ b/js/profile/profile-dreams.html
@@ -5,7 +5,7 @@
 		    <a ui-sref="profile.view.introduction">Introduction</a>
 		    	
 		    <div class="profile_tab" heading="CV">
-				<div ui-view="dreamsInner">
+				<div ui-view="dreamsInner" class="scaleup">
 					this is a placeholder
 				</div>
 		    </div>
