animation of nested view complete

--- a/js/profile/profile-dreams.html
+++ b/js/profile/profile-dreams.html
@@ -5,9 +5,9 @@
 		    <a ui-sref="profile.view.introduction">Introduction</a>
 		    	
 		    <div class="profile_tab" heading="CV">
-				<div ui-view="dreamsInner" class="scaleup">
+				<div ui-view="dreamsInner" class="profile_animate">
 					this is a placeholder
-				</div>
+				<div /ui-view>
 		    </div>
   		</tabset>
 	</div>
