--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
 	<body>
 		
 		<systemheader></systemheader>
-		
+		<div class="ui-view-container">
 		<ui-view autoscroll="false" class="fade"></ui-view>
+		</div>
 		
 		<systemfooter></systemfooter>
 
-		<script src="js/vendor/angular/angular.js"></script>
+		<!-- // <script src="js/vendor/angular/angular.js"></script> -->
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
 		<!-- // <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
 		<script src="js/vendor/angular-ui-router/release/angular-ui-router.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-animate.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-animate.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
 		<!-- // <script src="js/vendor/angular-bootstrap/ui-bootstrap.js"></script> -->
 		<script src="//code.jquery.com/jquery.js"></script>
