model bootrapped with AuthCtrlSystem

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 		
 		<systemheader></systemheader>
 		<div class="ui-view-container">
-		<ui-view autoscroll="false" class="fade"></ui-view>
+			<ui-view autoscroll="false" class="fade"></ui-view>
 		</div>
+	
+
+    
+
+
 		
 		<systemfooter></systemfooter>
 
@@ -44,6 +49,9 @@
 		<script src="js/system/header/HeaderDirective.js"></script>
 		<script src="js/system/footer/FooterCtrl.js"></script>
 		<script src="js/system/footer/FooterDirective.js"></script>
+		
+		<!-- // System Auth-->
+		<script src="js/system/auth/AuthCtrl.js"></script>
 		
 		<!-- // Listings Controllers -->
 		<script src="js/listings/controllers/ListingsCtrl.js"></script>
