--- a/js/home/home-welcome.html
+++ b/js/home/home-welcome.html
@@ -3,5 +3,12 @@
 		<h3>Welcome to Your App</h3>
 		<a href="#/listings" class="btn btn-warning">View Listings</a>
 		<a href="#/profile" class="btn btn-success">Edit Profile</a>
+<div ng-controller="ModalDemoCtrl">
+ 
+    <button class="btn btn-default" ng-click="open()">Open me!</button>
+    <button class="btn btn-default" ng-click="open('lg')">Large modal</button>
+    <button class="btn btn-default" ng-click="open('sm')">Small modal</button>
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+</div>
 	</div>
 </div>
