--- a/index.html
+++ b/index.html
@@ -19,29 +19,30 @@
 	<body>
 		
 		<systemheader></systemheader>
-		<div class="ui-view-container">
+
+		<section class="ui-view-container">
 			<ui-view autoscroll="false" class="fade"></ui-view>
-		</div>
+		</section>
 	
-
-    
-
-
-		
 		<systemfooter></systemfooter>
 
-		<!-- // <script src="js/vendor/angular/angular.js"></script> -->
+		<!-- Angular -->
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
-		<!-- // <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> -->
+		<!-- ui Router -->
 		<script src="js/vendor/angular-ui-router/release/angular-ui-router.js"></script>
+		<!-- Animate -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-animate.js"></script>
+		<!-- ui Bootstrap -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
-		<!-- // <script src="js/vendor/angular-bootstrap/ui-bootstrap.js"></script> -->
+		<!-- jQuery -->
 		<script src="//code.jquery.com/jquery.js"></script>
+		<!-- ng Resource -->
 		<script src="js/vendor/ng-resource/dist/ng-resource.js"></script>
-		<!-- // <script src="js/vendor/angular-animate/angular-animate.js"></script> -->
+		<!-- Firebase -->
 		<script src="//cdn.firebase.com/v0/firebase.js"></script>
+		<!-- Angular Fire -->
 		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
+		<!-- Firebase Login -->
 		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
 		<!-- // System -->
@@ -71,13 +72,5 @@
 		<!-- // Ratings Plugin -->
 		<!-- // <script src="js/profile/plugins/RatingsCtrl.js"></script> -->
 
-
-
-
-
-		<!-- // <script src="js/controllers.js"></script> -->
-		<!-- script src="js/filters.js"></script -->
-		<!-- script src="js/services.js"></script -->
-		<!-- script src="js/directives.js"></script -->
 	</body>
 </html>
