--- a/js/profile/profile-dreams.html
+++ b/js/profile/profile-dreams.html
@@ -7,7 +7,7 @@
 		    <div class="profile_tab" heading="CV">
 				<div ui-view="dreamsInner" class="profile_animate">
 					this is a placeholder
-				<div /ui-view>
+				</div>
 		    </div>
   		</tabset>
 	</div>
