ngRoute added, so far so good

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
 		<!-- Angular -->
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
+
+		<!-- ng Route -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-route.js"></script>
+
 		<!-- ui Router -->
 		<script src="js/vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<!-- Animate -->
@@ -39,11 +43,12 @@
 		<!-- ng Resource -->
 		<script src="js/vendor/ng-resource/dist/ng-resource.js"></script>
 		<!-- Firebase -->
-		<script src="//cdn.firebase.com/v0/firebase.js"></script>
+		<!-- // <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script> -->
+		<!-- // <script src="//cdn.firebase.com/v0/firebase.js"></script> -->
 		<!-- Angular Fire -->
-		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
+		<!-- // <script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script> -->
 		<!-- Firebase Login -->
-		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
+		<!-- // <script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script> -->
 
 		<!-- // System -->
 		<script src="js/system/header/HeaderCtrl.js"></script>
