--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<systemfooter></systemfooter>
 
 		<!-- Angular -->
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.min.js"></script>
 
 		<!-- ng Route -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-route.js"></script>
@@ -43,8 +43,9 @@
 		<!-- ng Resource -->
 		<script src="js/vendor/ng-resource/dist/ng-resource.js"></script>
 		<!-- Firebase -->
-		<!-- // <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script> -->
-		<!-- // <script src="//cdn.firebase.com/v0/firebase.js"></script> -->
+
+
+
 		<!-- Angular Fire -->
 		<!-- // <script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script> -->
 		<!-- Firebase Login -->
