user registration added

--- a/js/home/home-pitch.html
+++ b/js/home/home-pitch.html
@@ -30,4 +30,5 @@
 			</div>
 		</div>
 	</div>
+	<p>There is no point trying to game the skills section, if your trying to sell yourself as gardener and your tags make you appear in the office section, then people looking for gardening won't find you and people looking for office workers won't click on you. If your trying to sell gardening services to office workers simply createa new tag like micro-landscape-gardener.</p>
 </div>
