--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<title>careersuici.de</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="A simple template for getting started with AngularFire (AngularJS + Firebase) w/ user login system">
-		<meta name="author" content="Matt Malenczak">
+		<meta name="author" content="careersuici.de">
+		<link rel="shortcut icon" href="favicon.ico" />
 		<!-- link rel="shortcut icon" href="img/favicon.png" -->
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
@@ -27,7 +28,7 @@
 		<systemfooter></systemfooter>
 
 		<!-- Angular -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.js"></script>
 
 		<!-- ng Route -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-route.js"></script>
@@ -42,14 +43,24 @@
 		<script src="//code.jquery.com/jquery.js"></script>
 		<!-- ng Resource -->
 		<script src="js/vendor/ng-resource/dist/ng-resource.js"></script>
-		<!-- Firebase -->
+		
+
+<!-- Firebase -->
+<!-- <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script> -->
+<!-- Firebase Simple Login -->
+<!-- <script src="https://cdn.firebase.com/js/simple-login/1.6.3/firebase-simple-login.js"></script> -->
+<!-- AngularFire -->
+<!-- <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script> -->
+
+		<script src="//cdn.firebase.com/v0/firebase.js"></script>
+		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
+		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
 
 
-		<!-- Angular Fire -->
-		<!-- // <script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script> -->
-		<!-- Firebase Login -->
-		<!-- // <script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script> -->
+
+		<script src="js/system.js"></script>
+		<script src="js/controllers.js"></script>
 
 		<!-- // System -->
 		<script src="js/system/header/HeaderCtrl.js"></script>
@@ -63,7 +74,6 @@
 		<!-- // Listings Controllers -->
 		<script src="js/listings/controllers/ListingsCtrl.js"></script>
 
-		<script src="js/app.js"></script>
 
 		<!-- // Profile Controllers -->
 		<script src="js/profile/controllers/ProfileCtrl.js"></script>
