using rootscope emit to dismiss a controller

--- a/js/home/home-welcome.html
+++ b/js/home/home-welcome.html
@@ -1,14 +1,9 @@
 <div class="container">
 	<div class="jumbotron">
-		<h3>Welcome to Your App</h3>
-		<a href="#/listings" class="btn btn-warning">View Listings</a>
-		<a href="#/profile" class="btn btn-success">Edit Profile</a>
-<div ng-controller="ModalDemoCtrl">
- 
-    <button class="btn btn-default" ng-click="open()">Open me!</button>
-    <button class="btn btn-default" ng-click="open('lg')">Large modal</button>
-    <button class="btn btn-default" ng-click="open('sm')">Small modal</button>
-    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
-</div>
+		<h3>A jobs board for people who are really fed up.</h3>
+		<!-- <a href="#/listings" class="btn btn-warning">Employ Someone Different</a> -->
+		<div ng-controller="ModalDemoCtrl">
+			<a class="btn btn-success" ng-click="open()">Sign Up!</a>
+ 		</div>
 	</div>
 </div>
