--- a/js/system/auth/auth-modal.html
+++ b/js/system/auth/auth-modal.html
@@ -1,18 +1,59 @@
 
         <div class="modal-header">
-            <h3 class="modal-title">I'm a modal!</h3>
+            <h3 class="modal-title">What are you waiting for! A bamboo sword?</h3>
         </div>
         <div class="modal-body">
-            <ul>
-                <li ng-repeat="item in items">
-                    <a ng-click="selected.item = item">{{ item }}</a>
-                </li>
-            </ul>
-            Selected: <b>{{ selected.item }}</b>
+            <div class="row" ng-controller="AuthCtrl">
+                <div class="col-md-12">
+                    <div ng-show="user && user.id"> 
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="firstName">First Name</label>
+                                <input type="text" class="form-control" id="firstName" ng-model="userData.name.first" placeholder="First Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="lastName">Last Name</label>
+                                <input type="text" class="form-control" id="lastName" ng-model="userData.name.last" placeholder="Last Name">
+                            </div>
+                            <button class="btn btn-primary" ng-click="logout()">Log Out</a>
+                            <img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
+                        </form>
+                    </div>
+                    <div ng-show="user && !user.id">
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="inputEmail">Email address</label>
+                                <input type="email" class="form-control" id="inputEmail" ng-model="inputEmail" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword">Password</label>
+                                <input type="password" class="form-control" id="inputPassword" ng-model="inputPassword" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn btn-primary" ng-submit="login()" ng-click="login()">Log In</button> 
+                            <button class="btn btn-default" ng-click="register()">Register</button>
+                            <img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
+                        </form>
+                    </div>
+                    <p class="alert alert-danger" ng-show="loginMessage" style="margin-top: 20px;">{{loginMessage}}</p>
+                </div>
+                <div class="col-md-12">
+                    <p><strong>User:</strong> {{user}}</p>
+                    <p><strong>User Data:</strong> {{userData}}</p>
+                </div>
+
+
+
+
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="ok()">OK</button>
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
+            <!-- <ul>
+                <li ng-repeat="item in items">
+                    <a ng-click="selected.item = item">{{ item }}</a>
+                </li>
+            </ul>
+            Selected: <b>{{ selected.item }}</b> -->
 
 
