a rough style guide

--- a/js/home/home-layout.html
+++ b/js/home/home-layout.html
@@ -1,5 +1,5 @@
+<section class="home-welcome">
 <div class="container">
-	<h1>Home Layout</h1>
 	<article class="row">
 		<div class="col-sm-6">
 			<div ui-view="welcome">
@@ -7,6 +7,9 @@
 			</div>
 		</div>
 	</article>
+</div>
+</section>
+<div class="container">
 	<article>
 		<div class="col-sm-12">
 			<div ui-view="pitch">
