--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body>
+	<body class="system">
 		
 		<systemheader></systemheader>
 
