--- a/js/home/home-welcome.html
+++ b/js/home/home-welcome.html
@@ -1,9 +1,14 @@
 <div class="container">
-	<div class="jumbotron">
-		<h3>A jobs board for people who are really fed up.</h3>
-		<!-- <a href="#/listings" class="btn btn-warning">Employ Someone Different</a> -->
-		<div ng-controller="ModalDemoCtrl">
-			<a class="btn btn-success" ng-click="open()">Sign Up!</a>
- 		</div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2">
+			<article class="home-cta">
+				<h1 class="logo-intro">careersuici<span class="logo-outro">.</span>de</h1>
+				<h3>A jobs board for people who are really fed up.</h3>
+				<!-- <a href="#/listings" class="btn btn-warning">Employ Someone Different</a> -->
+				<div ng-controller="ModalDemoCtrl">
+					<a class="btn btn-success" ng-click="open()">Sign Up!</a>
+		 		</div>
+			</article>
+		</div>
 	</div>
 </div>
