--- a/js/system/auth/auth-modal.html
+++ b/js/system/auth/auth-modal.html
@@ -5,41 +5,53 @@
         <div class="modal-body">
             <div class="row" ng-controller="AuthCtrl">
                 <div class="col-md-12">
-                    <div ng-show="user && user.id"> 
-                        <form role="form">
-                            <div class="form-group">
-                                <label for="firstName">First Name</label>
-                                <input type="text" class="form-control" id="firstName" ng-model="userData.name.first" placeholder="First Name">
-                            </div>
-                            <div class="form-group">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" class="form-control" id="lastName" ng-model="userData.name.last" placeholder="Last Name">
-                            </div>
-                            <button class="btn btn-primary" ng-click="logout()">Log Out</a>
-                            <img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
-                        </form>
+                    <div ng-show="user && user.id && !nowRegistered"> 
+                        <h2>Seems you already did that!</h2>
+                        <p><strong>User:</strong> {{user}}</p>
+                        <p><strong>User Data:</strong> {{userData}}</p>
+                        <button class="btn btn-primary" ng-click="logout()">Log Out</a>
+                        <img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
+
                     </div>
-                    <div ng-show="user && !user.id">
+                    <div ng-show="user && !user.id" ng-hide="nowRegistered">
                         <form role="form">
                             <div class="form-group">
                                 <label for="inputEmail">Email address</label>
                                 <input type="email" class="form-control" id="inputEmail" ng-model="inputEmail" placeholder="Email">
                             </div>
                             <div class="form-group">
+                                <label for="inputUsername">Username</label>
+                                <input type="text" class="form-control" id="inputUsername" ng-model="inputUsername" placeholder="Username">
+                            </div>
+                            <div class="form-group">
                                 <label for="inputPassword">Password</label>
                                 <input type="password" class="form-control" id="inputPassword" ng-model="inputPassword" placeholder="Password">
                             </div>
-                            <button type="submit" class="btn btn-primary" ng-submit="login()" ng-click="login()">Log In</button> 
+                            <!-- <button type="submit" class="btn btn-primary" ng-submit="login()" ng-click="login()">Log In</button>  -->
                             <button class="btn btn-default" ng-click="register()">Register</button>
                             <img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
                         </form>
                     </div>
+                    <div ng-hide="nowRegistered">
+                        <form role="form">
+
+                            <div class="form-group">
+                                <label for="inputUsername">Username</label>
+                                <input type="text" class="form-control" id="inputUsername" ng-model="inputUsername" placeholder="Franz Kafka">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputIntroduction">Introduction</label>
+                                <textarea class="form-control" id="inputIntroduction" ng-model="inputIntroduction" placeholder="I know it might affect my art if I leave my Brotberuf but I really think I could be doing something better with my time" rows="4"></textarea>
+                                
+                            </div>
+                            <button type="submit" class="btn btn-primary" ng-submit="info()" ng-click="info()">Get moving</button> 
+                            <img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
+                        </form>
+                    </div>
+
                     <p class="alert alert-danger" ng-show="loginMessage" style="margin-top: 20px;">{{loginMessage}}</p>
                 </div>
-                <div class="col-md-12">
-                    <p><strong>User:</strong> {{user}}</p>
-                    <p><strong>User Data:</strong> {{userData}}</p>
-                </div>
+                
 
 
 
