changed remote to fresh repo

--- a/js/home/home-welcome.html
+++ b/js/home/home-welcome.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<article class="home-cta">
-				<h1 class="logo-intro">careersuici<span class="logo-outro">.</span>de</h1>
+				<h1 class="big-logo logo-intro">careersuic<span class="logo-outro">i.d</span>e</h1>
 				<h3>A jobs board for people who are really fed up.</h3>
 				<!-- <a href="#/listings" class="btn btn-warning">Employ Someone Different</a> -->
 				<div ng-controller="ModalDemoCtrl">
