--- a/js/system/header/header.html
+++ b/js/system/header/header.html
@@ -3,11 +3,11 @@
 	<nav class="navbar navbar-default navbar-fixed-top"> 
 		<div class="container">
 			<div class="navbar-header" ng-controller="HeaderCtrl">
-				<a class="navbar-brand" href="#/">{{sitename}}</a>
+				<a class="navbar-brand logo-intro" href="#/"><span class="logo-intro">careersuic<span class="logo-outro">i.d</span>e</span></a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="#/listings">Listings</a></li>
-				<li><a href="#/profile">Profile</a></li>
+				<!-- <li><a href="#/profile">Profile</a></li> -->
 			</ul>
 			<div class="nav navabar-right navbar-text">
 				{{greeting}}
