boostrapped cloud directive, some breaking changes

--- a/index.html
+++ b/index.html
@@ -56,23 +56,20 @@
 		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
 		<script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
-
-
-
 		<script src="js/system.js"></script>
-		<script src="js/controllers.js"></script>
 
 		<!-- // System -->
 		<script src="js/system/header/HeaderCtrl.js"></script>
 		<script src="js/system/header/HeaderDirective.js"></script>
 		<script src="js/system/footer/FooterCtrl.js"></script>
 		<script src="js/system/footer/FooterDirective.js"></script>
-		
 		<!-- // System Auth-->
 		<script src="js/system/auth/AuthCtrl.js"></script>
 		
 		<!-- // Listings Controllers -->
 		<script src="js/listings/controllers/ListingsCtrl.js"></script>
+		<!-- // Cloud Plugin -->
+		<script src="js/listings/plugins/CloudDirective.js"></script>
 
 
 		<!-- // Profile Controllers -->
@@ -80,8 +77,6 @@
 		<script src="js/profile/controllers/DreamsCtrl.js"></script>
 		<script src="js/profile/controllers/SkillsCtrl.js"></script>
 		<script src="js/profile/controllers/StatsCtrl.js"></script>
-		
-
 		<!-- // Weather Plugin -->
 		<script src="js/profile/weather/jquery.simpleWeather.js"></script>
 		<script src="js/profile/weather/WeatherDirective.js"></script>
