--- a/js/home/home-pitch.html
+++ b/js/home/home-pitch.html
@@ -1,32 +1,46 @@
-<div class="row">
+<div class="row moral-justification">
 	<div class="col-sm-12">
-		<h2>App does stuff, you should totally use it</h2>
+		<h2>"During previous ages, samurai were able to move between masters and even between occupations. However, during the Edo period, samurai were restricted, and were above all forbidden to become employed by another master without their previous master's permission." <span>Ni dieu ni maître</span></h2>
 	</div>
+</div>
+<div class="row moral-justification" ng-controller="SkillsCtrl">
+
+	<div class="col-sm-12 well">
+	<cloud></cloud>
+		<!-- <cloud words="{{skills}}" width="500" height="350" steps="7"></cloud> -->
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-sm-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<h1>Discuss</h1>
+				<h1>What </h1>
+				<p>Finding employees is expensive. Whether your looking for a Loud Mouthed Accounts Administrator with Scaffolding experience, or a Polite Door Attendent with Arabic and Mixology, your in the right place.</p>
 		  	</div>
 		</div>
 	</div>
 	<div class="col-sm-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<h1>Design</h1>
+				<h1>When</h1>
+				<p>So much of todays work is automated, and people are exposed to such a wide range of industry and technology that many roles are intechangable</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-sm-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<h1>Develop</h1>
+				<h1>Why</h1>
+				<p>It doesn't matter how able or clever someone is, if they are not in a job they love, someone else could be doing it better</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-sm-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<h1>Deploy</h1>
+				<h1>How</h1>
+				<p>We are founded on the notion that everyone has a passion, yet many people are prevented from working in that field by outdated notions of what makes somebody qualified</p>
 			</div>
 		</div>
 	</div>
