--- a/js/home/home-welcome.html
+++ b/js/home/home-welcome.html
@@ -3,7 +3,7 @@
 		<div class="col-md-8 col-md-offset-2">
 			<article class="home-cta">
 				<h1 class="big-logo logo-intro">careersuic<span class="logo-outro">i.d</span>e</h1>
-				<h3>A jobs board for people who are really fed up.</h3>
+				<h3>For people who are really fed up with interviews.</h3>
 				<!-- <a href="#/listings" class="btn btn-warning">Employ Someone Different</a> -->
 				<div ng-controller="ModalDemoCtrl">
 					<a class="btn btn-success" ng-click="open()">Sign Up!</a>
