--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="js/system.css"/>
+		<!-- should be compiled less via grunt but it was either that or a product -->
+		<link rel="stylesheet" href="js/listings/plugins/jq-cloud.css"/>
 		<!--[if lt IE 9]>
 			<script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 			<script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -24,6 +26,8 @@
 		<section class="ui-view-container">
 			<ui-view autoscroll="false" class="fade"></ui-view>
 		</section>
+
+
 	
 		<systemfooter></systemfooter>
 
@@ -51,6 +55,8 @@
 <!-- <script src="https://cdn.firebase.com/js/simple-login/1.6.3/firebase-simple-login.js"></script> -->
 <!-- AngularFire -->
 <!-- <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script> -->
+		
+		<script src="js/listings/plugins/jQCloud.js"></script>
 
 		<script src="//cdn.firebase.com/v0/firebase.js"></script>
 		<script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
