--- a/js/home/home-pitch.html
+++ b/js/home/home-pitch.html
@@ -3,11 +3,16 @@
 		<h2>"During previous ages, samurai were able to move between masters and even between occupations. However, during the Edo period, samurai were restricted, and were above all forbidden to become employed by another master without their previous master's permission." <span>Ni dieu ni maître</span></h2>
 	</div>
 </div>
-<div class="row moral-justification" ng-controller="SkillsCtrl">
+<div class="row moral-justification" ng-controller="GoKu">
 
 	<div class="col-sm-12 well">
-	<cloud></cloud>
-		<!-- <cloud words="{{skills}}" width="500" height="350" steps="7"></cloud> -->
+		
+
+		{{users}}
+		
+
+
+
 	</div>
 </div>
 
@@ -24,7 +29,7 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<h1>When</h1>
-				<p>So much of todays work is automated, and people are exposed to such a wide range of industry and technology that many roles are intechangable</p>
+				<p>Sometimes the interpersonal skills and life experience are fare more important that the pieces of paper and rote industry learning. Yes you do need people that know what they are talking about and can do the job but sometimes it's the way they do the job that's equally important. If you are looking for a new job and get frustrated that people dont take into account your personal attribute and skills dont </p>
 			</div>
 		</div>
 	</div>
@@ -32,7 +37,7 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<h1>Why</h1>
-				<p>It doesn't matter how able or clever someone is, if they are not in a job they love, someone else could be doing it better</p>
+				<p>It doesn't matter how able or clever someone is, if they are not in a job they love, someone else could be doing it better.</p>
 			</div>
 		</div>
 	</div>
