--- a/js/system/footer/footer.html
+++ b/js/system/footer/footer.html
@@ -2,8 +2,12 @@
 	<!-- ng-controller="SystemCtrl"> -->
 	<div class="container">
     	<div class="row">
-      		<div class="col-sm-12" ng-controller="FooterCtrl">
+      		<div class="col-sm-8" ng-controller="FooterCtrl">
 				<h6>&copy; {{copyleft}}</h6>
+      		</div>
+      		<div class="col-sm-4" ng-controller="FooterCtrl">
+				<h6>jobs</h6>
+				<p>We are a free speach employer</p>
       		</div>
     	</div>
   	</div>
