--- a/js/home/home-pitch.html
+++ b/js/home/home-pitch.html
@@ -8,8 +8,8 @@
 	<div class="col-sm-12 well">
 		
 
-		{{users}}
-		
+		<button ng-click="sumSkills(users)">do math</button>
+		<h6 ng-repeat="user in users">{{user.skills}}</h6>
 
 
 
