--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-animate.js"></script>
 		<!-- ui Bootstrap -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
-		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
 		<!-- ng Resource -->
 		<script src="application/vendor/ng-resource/dist/ng-resource.js"></script>
+		<!-- jQuery -->
+		<script src="//code.jquery.com/jquery.js"></script>
+		<!-- Underscore 1.7.0 -->
+		<script src="application/vendor/underscore/underscore.js"></script>
 		
 
 <!-- Firebase -->
