--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -30,6 +30,11 @@
 		</div>
 		<div class="well">
 			<h4>Active Filters</h4>
+			<button class="btn btn-primary" 
+				ng-click="removeActiveSkill()" 
+				ng-repeat="skill in activeSkillsArray">
+				{{skill.name}}
+		</button>
 		</div>
 	</div>
 </div>
