--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -31,7 +31,7 @@
 		<div class="well">
 			<h4>Active Filters</h4>
 			<button class="btn btn-primary" 
-				ng-click="removeActiveSkill()" 
+				ng-click="removeFilter(skill)" 
 				ng-repeat="skill in activeSkillsArray">
 				{{skill.name}}
 		</button>
