account page bootstrapped

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="application/system.css"/>
+		<link rel="stylesheet" href="application/profile/less/account.css"/>
 		<!-- should be compiled less via grunt but it was either that or a product -->
 		<link rel="stylesheet" href="application/listings/plugins/jq-cloud.css"/>
 		<!--[if lt IE 9]>
@@ -73,7 +74,9 @@
 		<script src="application/system/footer/FooterDirective.js"></script>
 		<!-- // System Auth-->
 		<script src="application/system/auth/AuthCtrl.js"></script>
-		
+		<!-- // System Api -->
+		<script src="application/system/SystemApi.js"></script>
+
 		<!-- // Listings Controllers -->
 		<script src="application/listings/controllers/ListingsCtrl.js"></script>
 		<!-- // Cloud Plugin -->
@@ -85,6 +88,8 @@
 		<script src="application/profile/controllers/DreamsCtrl.js"></script>
 		<script src="application/profile/controllers/SkillsCtrl.js"></script>
 		<script src="application/profile/controllers/StatsCtrl.js"></script>
+		<!-- // Edit Profile -->
+		<script src="application/profile/controllers/EditProfileCtrl.js"></script>
 		<!-- // Weather Plugin -->
 		<script src="application/profile/weather/jquery.simpleWeather.js"></script>
 		<script src="application/profile/weather/WeatherDirective.js"></script>
