--- a/application/home/home-layout.html
+++ b/application/home/home-layout.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<article class="row">
 		<div class="col-sm-6">
-			<div ui-view="NOTwelcome">
+			<div ui-view="welcome">
 				<!-- main view -->
 			</div>
 		</div>
