refactoring for fun and profit

--- a/application/profile/edit-profile-dreams.html
+++ b/application/profile/edit-profile-dreams.html
@@ -1,1 +1,5 @@
-edit-profile-dreams.html
+<div class="block">
+	
+					<p><strong>User:</strong> {{user}}</p>
+					<p><strong>User Data:</strong> {{userData}}</p>
+</div>
