--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="application/system.css"/>
+		<link rel="stylesheet" href="application/system/animate.css"/>
 		<link rel="stylesheet" href="application/profile/less/account.css"/>
 		<!-- should be compiled less via grunt but it was either that or a product -->
 		<link rel="stylesheet" href="application/listings/plugins/jq-cloud.css"/>
