--- a/application/profile/edit-profile-stats.html
+++ b/application/profile/edit-profile-stats.html
@@ -1,4 +1,19 @@
 <div class="block">
 	<h2>Account Details</h2>
-	
+	<article class="repeater" ng-repeat="thing in user.skills">
+		<div class="row">
+			<div class="col-sm-10">
+				<div class="thing-leaving animated" ng-hide="editswitch">{{thing.name}}</div>
+				<div class="edit-hidden thing-appearing animated" ng-hide="!editswitch">
+					<input type="text" class="form-control" id="inputUsername" ng-model="inputUsername" placeholder="Franz Kafka">
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<a ng-click="editswitch = !editswitch" class="edit">edit</a>
+			</div>
+		</div>
+		<!-- <div class="edit-field" ng-show="editswitch">
+			<textarea class="form-control" id="inputIntroduction" ng-model="inputIntroduction" placeholder="I know it might affect my art if I leave my Brotberuf but I really think I could be doing something better with my time" rows="4"></textarea>
+		</div> -->
+	</article>
 </div>
