--- a/application/profile/profile-layout.html
+++ b/application/profile/profile-layout.html
@@ -1,4 +1,4 @@
-<div class="container {{class}}">
+<div class="container account">
 	<h1>Profile Layout</h1>
 	<div class="row">
 		<div class="col-sm-8">
