--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="shortcut icon" href="favicon.ico" />
 		<!-- link rel="shortcut icon" href="img/favicon.png" -->
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="application/system.css"/>
 		<link rel="stylesheet" href="application/system/animate.css"/>
