--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -17,7 +17,7 @@
 			<h4>Candidates</h4>
 			<ul>
 				<li ng-repeat="candidate in filteredCandidatesArray">
-					<a href="#/{{candidate.username}}" class="btn btn-success" 
+					<a href="#/profile/{{candidate.username}}" class="btn btn-success" 
 					>{{candidate.username}}</a>
 				</li>
 			</ul>
