--- a/application/profile/edit-profile-dreams.html
+++ b/application/profile/edit-profile-dreams.html
@@ -1,5 +1,73 @@
-<div class="block">
-	
+<div class="row">
+	<div class="col-sm-6">
+		<div class="block">
+			messages
+			<i class="fa fa-envelope"></i>
+						
+
+
+
+		</div>			
+	</div>
+	<div class="col-sm-6">
+		<section class="block">
+			basic info
+			<i class="fa fa-tag"></i>
+			<div class="row">
+				<div class="col-sm-12">
+					<form role="form">
+					<div class="checkbox">
+				    	<label>
+				      		<input type="checkbox"> Allow unregistered users to contact me
+				    	</label>
+				  	</div>
+				  	<div class="checkbox">
+				    	<label>
+				      		<input type="checkbox"> Recruiter (your profile will not show in search)
+				    	</label>
+				  	</div>
+				  	<button type="submit" class="btn btn-default">Save</button>
+				</form>
+				</div>
+			</div>
+		</section>
+		<section class="block new-line">
+			security
+			<i class="fa fa-lock"></i>
+			<div class="row">
+				<div class="col-sm-12">
+					<form role="form">
+					<div class="checkbox">
+				    	<label>
+				      		<input type="checkbox"> Allow unregistered users to contact me
+				    	</label>
+				  	</div>
+				  	<div class="checkbox">
+				    	<label>
+				      		<input type="checkbox"> Recruiter (your profile will not show in search)
+				    	</label>
+				  	</div>
+				  	<button type="submit" class="btn btn-default">Save</button>
+				</form>
+				</div>
+			</div>
+		</section>			
+	</div>
+</div>
+<div class="row new-line">
+	<div class="col-sm-12">
+		<div class="block">
+			write about yourself
+			<i class="fa fa-pencil-square-o"></i>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
 					<p><strong>User:</strong> {{user}}</p>
 					<p><strong>User Data:</strong> {{userData}}</p>
 </div>
