--- a/application/profile/urbanquack.html
+++ b/application/profile/urbanquack.html
@@ -7,9 +7,9 @@
 		    	
 		    <div class="profile_tab" heading="CV">
 				<div ui-view="dreamsInner" class="profile_animate">
-<!-- 					<img src="http://localhost/salad/application/systemimage/me/me.png" />
+					<img src="http://localhost/salad/application/systemimage/me/me.png" />
 					<img src="http://localhost/salad/application/systemimage/franzfafka/IMG_0002.jpg" />
-					<img src="http://localhost/salad/application/systemimage/.jpg" /> -->
+					<img src="http://localhost/salad/application/systemimage/.jpg" />
 					<img src="http://localhost/salad/application/systemimage/urbanquack/e1.jpg" />
 					<img src="http://localhost/salad/application/systemimage/urbanquack/e2.jpg" />
 					<img src="http://localhost/salad/application/systemimage/urbanquack/e3.jpg" />
@@ -22,10 +22,3 @@
   		</section>
 	</div>
 </div>
-
-<!--     <tab select="alertMe()">
-      <tab-heading>
-        <i class="glyphicon glyphicon-bell"></i> Alert!
-      </tab-heading>
-      I've got an HTML heading, and a select callback. Pretty cool!
-    </tab> -->
