--- a/application/system/header/header.html
+++ b/application/system/header/header.html
@@ -1,17 +1,43 @@
-<header>
-	<!-- ng-controller="SystemCtrl"> -->
-	<nav class="navbar navbar-default navbar-fixed-top"> 
-		<div class="container">
-			<div class="navbar-header" ng-controller="HeaderCtrl">
-				<a class="navbar-brand logo-intro" href="#/"><span class="logo-intro">careersuic<span class="logo-outro">i.d</span>e</span></a>
-			</div>
-			<ul class="nav navbar-nav">
-				<li><a href="#/listings">Listings</a></li>
-				<!-- <li><a href="#/profile">Profile</a></li> -->
-			</ul>
-			<div class="nav navabar-right navbar-text">
-				{{greeting}}
-			</div>
-		</div>
-	</nav>
+<header ng-controller="AuthCtrl">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand logo-intro" href="#/"><span class="logo-intro">careersuic<span class="logo-outro">i.d</span>e</span></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#/listings">Listings</a></li>
+        <li><a href="#/profile/i-want-to-cut-patterns">Profile</a></li>
+        <li><a href="#/account">Account</a></li>
+<!--         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+          </ul>
+        </li> -->
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+      <div class="form-group">
+            <h5>Hello {{greeting}}</h5>
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="text" ng-model="inputEmail" placeholder="email">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="password" ng-model="inputPassword" placeholder="password">
+        </div>
+        <button class="btn btn-default" ng-click="login()" ng-submit="login">Sign In</button>
+      </form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 </header>
