--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" href="application/profile/less/account.css"/>
 		<!-- should be compiled less via grunt but it was either that or a product -->
 		<link rel="stylesheet" href="application/listings/plugins/jq-cloud.css"/>
+
+				<link rel="stylesheet" href="application/listings/plugins/cloud.css"/>
 		<!--[if lt IE 9]>
 			<script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 			<script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -83,6 +85,8 @@
 		<script src="application/listings/controllers/ListingsCtrl.js"></script>
 		<!-- // Cloud Plugin -->
 		<script src="application/listings/plugins/CloudDirective.js"></script>
+		<script src="application/listings/plugins/CloudCtrl.js"></script>
+
 
 
 		<!-- // Profile Controllers -->
