simplified app and first test passing

--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
 
 		<!-- ng Route -->
 		<script src="vendor/angular-route/angular-route.js"></script>
-
 		<!-- ui Router -->
 		<script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<!-- Animate -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.8/angular-animate.js"></script>
+		<script src="vendor/angular-animate/angular-animate.js"></script>
 		<!-- ui Bootstrap -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
+		<script src="vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<!-- ng Resource -->
 		<script src="vendor/ng-resource/dist/ng-resource.js"></script>
 		<!-- jQuery -->
-		<script src="//code.jquery.com/jquery.js"></script>
+		<script src="vendor/jquery/dist/jquery.js"></script>
 		<!-- Underscore 1.7.0 -->
 		<script src="vendor/underscore/underscore.js"></script>
 		
@@ -75,28 +74,29 @@
 		<script src="application/system/header/HeaderDirective.js"></script>
 		<script src="application/system/footer/FooterCtrl.js"></script>
 		<script src="application/system/footer/FooterDirective.js"></script>
-		<!-- // System Auth-->
+		<!-- // System Auth- ->
 		<script src="application/system/auth/AuthCtrl.js"></script>
-		<!-- // System Api -->
+		<!-- // System Api - ->
 		<script src="application/system/SystemApi.js"></script>
 
 		<!-- // Listings Controllers -->
-		<script src="application/listings/controllers/ListingsCtrl.js"></script>
+		<!-- // <script src="application/listings/controllers/ListingsCtrl.js"></script> -->
 		<!-- // Cloud Plugin -->
 		<script src="application/listings/plugins/CloudDirective.js"></script>
+		<script src="application/listings/plugins/CloudCtrl.js"></script>
 
 
-		<!-- // Profile Controllers -->
+		<!-- // Profile Controllers - ->
 		<script src="application/profile/controllers/ProfileCtrl.js"></script>
 		<script src="application/profile/controllers/DreamsCtrl.js"></script>
 		<script src="application/profile/controllers/SkillsCtrl.js"></script>
 		<script src="application/profile/controllers/StatsCtrl.js"></script>
-		<!-- // Edit Profile -->
+		<!-- // Edit Profile - ->
 		<script src="application/profile/controllers/EditProfileCtrl.js"></script>
-		<!-- // Weather Plugin -->
+		<!-- // Weather Plugin - ->
 		<script src="application/profile/weather/jquery.simpleWeather.js"></script>
 		<script src="application/profile/weather/WeatherDirective.js"></script>
-		<!-- // Ratings Plugin -->
+		<!-- // Ratings Plugin - ->
 		<!-- // <script src="application/profile/plugins/RatingsCtrl.js"></script> -->
 
 	</body>
