--- a/application/system/header/header.html
+++ b/application/system/header/header.html
@@ -1,4 +1,5 @@
-<header ng-controller="AuthCtrl">
+<header> 
+<!-- ng-controller="AuthCtrl"> -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -15,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#/listings">Listings</a></li>
+        <!-- <li><a href="#/listings">Listings</a></li> -->
         <li><a href="#/profile/i-want-to-cut-patterns">Profile</a></li>
         <li><a href="#/account">Account</a></li>
 <!--         <li class="dropdown">
