some documentation and tidying up of variable scope

--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -10,7 +10,7 @@
 		</section>
 		<button class="btn btn-default" 
 			ng-click="filterSkills(skill)" 
-			ng-repeat="skill in apiMockArray">
+			ng-repeat="skill in activeSkills">
 			{{skill.name}}
 			<span class="label label-info"> {{skill.value}}</span>
 		</button>
