--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -29,8 +29,8 @@
 			<h4>Active Filters</h4>
 			<button class="btn btn-primary" 
 				ng-click="removeFilter(skill)" 
-				ng-repeat="skill in activeFilters">
-				{{skill.name}}
+				ng-repeat="skill in filters">
+				{{skill}}
 		</button>
 		</div>
 	</div>
