--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
 		<script src="application/listings/plugins/CloudCtrl.js"></script>
 
 
-		<!-- // Profile Controllers - ->
-		<script src="application/profile/controllers/ProfileCtrl.js"></script>
-		<script src="application/profile/controllers/DreamsCtrl.js"></script>
-		<script src="application/profile/controllers/SkillsCtrl.js"></script>
-		<script src="application/profile/controllers/StatsCtrl.js"></script>
-		<!-- // Edit Profile - ->
+		// Profile Controllers - ->
+		<!-- // <script src="application/profile/controllers/ProfileCtrl.js"></script> -->
+		<!-- // <script src="application/profile/controllers/DreamsCtrl.js"></script> -->
+		<!-- // <script src="application/profile/controllers/SkillsCtrl.js"></script> -->
+		<!-- // <script src="application/profile/controllers/StatsCtrl.js"></script> -->
+		// Edit Profile - ->
 		<script src="application/profile/controllers/EditProfileCtrl.js"></script>
 		<!-- // Weather Plugin - ->
 		<script src="application/profile/weather/jquery.simpleWeather.js"></script>
 		<script src="application/profile/weather/WeatherDirective.js"></script>
 		<!-- // Ratings Plugin - ->
-		<!-- // <script src="application/profile/plugins/RatingsCtrl.js"></script> -->
+		<!-- // <script src="application/profile/plugins/RatingsCtrl.js"></script>
 
 	</body>
 </html>
