--- a/application/profile/edit-profile-dreams.html
+++ b/application/profile/edit-profile-dreams.html
@@ -1,16 +1,10 @@
 <div class="row">
-	<div class="col-sm-6">
-		<div class="block">
-			messages
-			<i class="fa fa-envelope"></i>
-						
-
-
-
-		</div>			
-	</div>
-	<div class="col-sm-6">
+	<div class="col-sm-5">
 		<section class="block">
+			<h3><i class="fa fa-user"></i> {{username}}</h3>		
+
+		</section>	
+		<section class="block new-line">
 			basic info
 			<i class="fa fa-tag"></i>
 			<div class="row">
@@ -51,15 +45,21 @@
 				</form>
 				</div>
 			</div>
-		</section>			
+		</section>		
+	</div>
+	<div class="col-sm-7">
+		<section class="block">
+			write about yourself
+			<i class="fa fa-pencil-square-o"></i>
+			<form role="form">
+			<textarea class="form-control" rows="9" ng-model="profile.info" placeholder="{{profile.info}}"></textarea>
+			<button type="submit" class="btn btn-default" ng-click="updateInfo()">Save</button>
+		</section>	
 	</div>
 </div>
 <div class="row new-line">
 	<div class="col-sm-12">
-		<div class="block">
-			write about yourself
-			<i class="fa fa-pencil-square-o"></i>
-		</div>
+
 	</div>
 </div>
 
